# eg-cs

./: .gitignore  CMakeLists.txt  LICENSE  settings.json  test.py
include/: Config.h  IOJson.h  JsonConsumer.h  Logging.h  ParseArgument.h  ReadJson.h  WriteJson.h
scripts/: Dockerfile  Dockerfile_arm  Dockerfile_arm_base  Dockerfile_x86  egcs.env  egcs_pipeline.sh  run_server.sh  spinup.sh
source/: CMakeLists.txt  Config.cpp  EventGenClient.cpp  IOJson.cpp  JsonConsumer.cpp  Logging.cpp  ParseArgument.cpp  ReadJson.cpp  WriteJson.cpp  main_egc.cpp  main_egs.cpp
